# Welder-Panel-Reader

./: README.md  main.py  pyproject.toml
configs/: dynasty350.yaml
docs/: DECISIONS.md
src/: app.py  camera.py  config.py  overlay.py  rois.py  smoothing.py  test_inference.py  vlm_moondream.py
